# try_and_learn

./: any.h  batcher.cpp  batcher.h  benchmark_map.h  curl_demo.cpp  item.h  item_container.cpp  item_container.h  lock_benchmark.h  main.cpp  meson.build  my_benchmark.cpp  rw_mutex.h  rwlock.h  sigslot.h  spinlock.h  temp.cpp  temp.h  thing.h  thing_container.cpp  thing_container.h  thread_pool.h  threadsafe_queue.h
